--- a/css/style.css
+++ b/css/style.css
@@ -20,3 +20,120 @@ Classes Auxiliares
 .clear{clear: both;}
 
 /***/
+.layer{
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0,0,0,0.7);
+	z-index: 1;
+}
+
+section.main{
+	position: relative;
+	background-image: url(../images/bg1.jpg);
+	background-position: center;
+	background-size: cover;
+	width: 100%;
+	padding: 15px 0;
+	min-height: 800px;
+}
+
+section.main header{
+	z-index: 2;
+	position: relative;
+	padding-bottom: 10px;
+	border-bottom: 1px solid white;
+}
+
+.icon-social{
+	float: right;
+}
+
+.icon-social a{
+	color: white;
+	text-decoration: none;
+	font-size: 20px;
+	margin: 0 15px;
+}
+
+.logo{
+	margin-top: 20px;
+	float: left;
+	font-size: 23px;
+	font-weight: bold;
+	color: white	;
+}
+
+nav.desktop{
+	float: right;
+	margin-top: 20px;
+}
+
+nav.desktop ul{
+	list-style-type: none;
+}
+
+nav.desktop li{
+	font-size: 17px;
+	font-weight: lighter;
+	display: inline-block;
+	margin: 0 15px;
+	
+}
+nav.desktop a{
+	text-decoration: none;
+	color: white;
+}
+
+.conteudo-header{
+	position: relative;
+	margin: 110px 0;
+	max-width: 700px;
+	z-index: 2;
+}
+
+.conteudo-header h2{
+	font-size: 44px;
+	font-weight: lighter;
+	color: white;
+}
+.conteudo-header h2 span{
+	color: #2692FF;
+}
+
+.conteudo-header p{
+	color: white;
+	margin-top: 18px;
+	font-size: 16px;
+	font-weight: lighter;
+}
+
+.conteudo-header a{
+	display: block;
+	width: 177px;
+	height: 44px;
+	background: #2692FF;
+	color: white;
+	text-decoration: none;
+	text-align: center;
+	margin-top: 18px;
+	line-height: 44px;
+	border-radius: 20px;
+}
+.chamada-planos{
+	width: 100%;
+	background: rgb(220,220,220);
+	text-align: center;
+	padding: 27px 2%;
+}
+
+.chamada-planos h2{
+	display: inline-block;
+	border-top: 2px solid #2692FF;
+	color: #2692FF;
+	font-size: 20px;
+	text-transform: uppercase;
+	font-weight: lighter;
+}
