--- a/css/style.css
+++ b/css/style.css
@@ -137,3 +137,66 @@ nav.desktop a{
 	text-transform: uppercase;
 	font-weight: lighter;
 }
+
+.box-planos{
+	padding: 40px 0;
+}
+.box-planos .center{
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.box-planos-single{
+	width: 33.3%;
+	padding: 0 40px;
+}
+
+.box-planos-wraper{
+	width: 100%;
+	border: 1px solid #ccc;
+	min-height: 300px;
+	-webkit-box-shadow: 10px 10px 5px -3px rgba(0,0,0,0.75);
+	-moz-box-shadow: 10px 10px 5px -3px rgba(0,0,0,0.75);
+	box-shadow: 10px 10px 5px -3px rgba(0,0,0,0.75);
+}
+
+.box-planos-single h2{
+	background-color: #2692FF;
+	color: white;
+	text-align: center;
+	padding: 3px;
+	font-weight: lighter;
+}
+
+.pontos-planos{
+	padding: 8px 0 15px 0px;
+}
+
+.box-planos-single p{
+	color: #777777;
+	font-size: 17px;
+	margin-top: 8px;
+	margin-left: 60px;
+}
+
+.preco{
+	margin-top: 10px;
+	padding: 15px 0;
+	text-align: center;
+}
+
+.preco h2{
+	display: inline-block;
+	border-top: 1px solid #ccc;
+	font-size: 24px;
+	padding: 0 40px;
+	color: #777777;
+	background: none;
+}
+
+@media screen and (max-width:768px){
+		.box-planos-single{
+			width: 100%;
+			margin: 10px 0;
+		}
+}
