--- a/css/style.css
+++ b/css/style.css
@@ -194,6 +194,55 @@ nav.desktop a{
 	background: none;
 }
 
+section.parallax{
+	padding: 40px 0;
+	position: relative;
+	width: 100%;
+	min-height: 300px;
+	background-image: url(../images/bg_parallax.jpg);
+	background-size: cover;
+	background-position: center	;
+	background-attachment: fixed;
+}
+
+section.parallax .center{
+	position: relative;
+	z-index: 2;
+	max-width: 980px;
+	margin: 40px auto;
+}
+
+section.parallax h2{
+	color: white;
+	text-align: center;
+}
+	
+section.parallax p{
+	color: white;
+	margin-top: 15px;
+}
+
+.overlay-parallax{
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 1;
+	background-color: rgba(20,20,20,0.6);
+}
+
+
+
+
+
+
+
+
+
+
+
+
 @media screen and (max-width:768px){
 		.box-planos-single{
 			width: 100%;
