--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,42 @@ section.main header{
 	color: white	;
 }
 
+nav.mobile{
+	display: none;
+	float: right;
+}
+
+nav.mobile ul{
+	display: none;
+	position: absolute;
+	left: 0;
+	top: 96px;
+	list-style-type: none;
+	background-color: #2692FF;
+	width: 100%;
+}
+
+nav.mobile li{
+	padding: 8px 0;
+	text-align: center;
+	font-weight: lighter;
+	border-bottom:1px solid white;
+}
+
+nav.mobile a{
+	display: block;
+	text-decoration: none;
+	color: white;
+}
+
+nav.mobile i{
+	font-size: 25px;
+	color: white;
+	cursor: pointer;
+	position: relative;
+	top: 23px;
+}
+
 nav.desktop{
 	float: right;
 	margin-top: 20px;
@@ -91,7 +127,7 @@ nav.desktop a{
 	position: relative;
 	margin: 110px 0;
 	max-width: 700px;
-	z-index: 2;
+	z-index: 1;
 }
 
 .conteudo-header h2{
@@ -172,6 +208,10 @@ nav.desktop a{
 	padding: 8px 0 15px 0px;
 }
 
+.box-planos-single{
+	cursor: pointer;
+}
+
 .box-planos-single p{
 	color: #777777;
 	font-size: 17px;
@@ -232,6 +272,129 @@ section.parallax p{
 	background-color: rgba(20,20,20,0.6);
 }
 
+section.final-section{
+	padding: 30px 0;
+}
+
+.w50{
+	float: left;
+	width: 50%;
+	padding: 0 20px;
+	margin: 30px 0;
+}
+
+section.final-section h2{
+	position: relative;
+	font-weight: lighter;
+	color: #777777;
+	font-size: 24px;
+}
+
+section.final-section h2 .border-efeito{
+	width: 80px;
+	height: 2px;
+	background: #777777;
+	position: absolute;
+	transition: 0.4s;
+}
+section.final-section h2:hover .border-efeito{
+	width: 100%;
+	
+}
+
+.contato form{
+	margin-top: 15px;
+}
+
+.contato input:not([type=submit]){
+	cursor: pointer;
+	width: 100%;
+	height: 40px;
+	border: 1px solid #ccc;
+	padding-left: 8px;
+	line-height: 40px;
+	margin-top: 10px;
+	display: block;
+	font-size: 15px;
+	font-size: 15px;
+}
+
+.contato input[type=submit]{
+	cursor: pointer;
+	cursor: pointer;
+	color: white;
+	background-color: #2692FF;
+	border: 0;
+	border-radius: 30px;
+	width: 100px;
+	height: 33px;
+}
+
+.contato textarea{
+	font-size: 15px;
+	width: 100%;
+	height: 120px;
+	border: 1px solid #ccc;
+	padding: 8px;
+	margin-top: 10px;
+	cursor: pointer;
+	resize: vertical;
+}
+
+.equipe-single .box-avatar{
+	display: inline-block;
+	width: 50px;
+	height: 50px;
+	border-radius: 50%;
+	background: #ccc;
+	vertical-align: middle;
+
+}
+
+.topo-box-usuario{
+	padding-bottom: 10px;
+	border-bottom: 1px solid #ccc;
+}
+
+.equipe-single{
+	padding: 10px 8px;
+	border: 1px solid #ccc;
+	min-height: 240px;
+	padding-bottom: 10px;
+	-webkit-box-shadow: 10px 10px 5px -3px rgba(0,0,0,0.75);
+	-moz-box-shadow: 10px 10px 5px -3px rgba(0,0,0,0.75);
+	box-shadow: 10px 10px 5px -3px rgba(0,0,0,0.75);
+}
+
+.info-usuario{
+	display: inline-block;
+	color: #777777;
+	padding-left: 8px;
+	vertical-align: middle;
+}
+
+.time .w50{
+	width: 48%;
+	margin: 15px 1%;
+}
+
+.descricao-usuario-box{
+	color: #999999;
+	font-weight: lighter;
+	font-size: 14px;
+	margin-top: 10px;
+}
+
+footer{
+	width: 100%;
+	padding: 10px 2%;
+	text-align: center;
+	color: white;
+	background-color: #444;
+}
+
+
+
 
 
 
@@ -244,8 +407,27 @@ section.parallax p{
 
 
 @media screen and (max-width:768px){
+
+		nav.mobile{
+			display: block;
+		}
+
+		nav.desktop{
+			display: none;
+		}
+
 		.box-planos-single{
 			width: 100%;
 			margin: 10px 0;
+		}
+
+		.w50{
+			width: 100%;
+			margin: 15px 0;
+		}
+
+		.time .w50{
+			width: 100%;
+			margin: 15px 0;
 		}
 }
